# CodeAstro_group_2

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  best_zhead_hires.pth  code_developing.ipynb  config.yaml  dataset_z_head.py  galaxy300_spectrum.npz  infer_zhead.py  model_z_head.py  pyproject.toml  run_zestimatr.py  spec-0302-51688-0325_z00251.fits  spec-0458-51929-0129_z01463.fits  test_open_file.ipynb  to_do.txt  train_z_head.py  utils.py
.github/workflows/: notebooks.yml  tests.yml
docs/: conf.py  dataset.rst  emission_lines.rst  index.rst  inference.rst  metrics.rst  model.rst  plotting.rst
pre-process/: Augmentation.ipynb  data_extraction.ipynb
scripts/: plot_augmentation_check.py  prepare_dataset.py  run_zestimatr.py  train.py
splits/: split_de47f384ab09ef66ee943a04c6da5afb.npz
src/zestimatr/: __init__.py  dataset.py  emission_lines.py  inference.py  metrics.py  model.py  plotting.py
tests/: test_dataset.py  test_emission_lines.py  test_end_to_end.py  test_inference.py  test_metrics.py  test_model.py
tutorials/: galaxy300_spectrum.npz  galaxy4_spectrum.npz  quickstart.ipynb  quickstart_batch_spectra.ipynb  quickstart_single_spectrum.ipynb  sample_100_spectra.npz
