[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "zestimatr"
version = "0.1.2"
description = "Spectroscopic redshift estimation with uncertainty quantification"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "tqdm",
    "huggingface_hub",
    "pandas",
]

[project.optional-dependencies]
train = [
    "wandb",
    "pyyaml",
]
preprocess = [
    "astropy",
    "scipy",
]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
